2003-05-05  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update

	* configure.in:
	Bump version

2003-05-03  Arvind Samptur  <arvind.samptur@wipro.com>
	* modules/cdemenu-desktop-method.c:
	(create_cde_icon_name_cache): While running the dttypes
	command to create a icon cache for the cde menu, we need
	to reap the child process. wait() currently on a solaris box
	fails with an EINTR. So loop till you succeed. Fixes #111628

2003-04-25  Alexander Larsson  <alexl@redhat.com>

	Based on patch by Frank Worsley <fworsley@shaw.ca>
	
	* libgnomevfs/gnome-vfs-utils.[ch]:
	(gnome_vfs_icon_path_from_filename):
	Use g_file_test instead of hack_file_exists.
	
	(gnome_vfs_make_uri_from_input_with_dirs):
	Add new function.

2003-04-24  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/Makefile.am (libgnomevfs_2_la_LIBADD): 
	Remove LTLIBOBJS for the moment. It was breaking the build.
	
2003-04-24  Alexander Larsson  <alexl@redhat.com>

	Patch from Frank Worsley <fworsley@shaw.ca>

	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_application_new_from_id),
	(gnome_vfs_mime_action_launch),
	(gnome_vfs_mime_action_launch_with_env),
	(gnome_vfs_mime_application_launch),
	(gnome_vfs_mime_application_launch_with_env), (expand_parameters):
	new functions for launching mime actions and applications
	
	* libgnomevfs/gnome-vfs-mime-handlers.h:
	updated for new functions
	
	* libgnomevfs/gnome-vfs-private-utils.c:
	(_gnome_vfs_use_handler_for_scheme),
	(_gnome_vfs_url_show_using_handler_with_env):
	private functions for launching url handlers defined in gconf
	
	(gnome_vfs_prepend_terminal_to_vector):
	the default terminal is needed by gnome-vfs so we make a copy of this
	from libgnome
	
	* libgnomevfs/gnome-vfs-private-utils.h:
	update for new functions
	
	* libgnomevfs/gnome-vfs-result.c:
	* libgnomevfs/gnome-vfs-result.h:
	new error codes for the new functions
	
	* libgnomevfs/gnome-vfs-utils.c:
	(gnome_vfs_url_show), (gnome_vfs_url_show_with_env):