@@ -1,7 +1,35 @@
 AC_INIT(libgnomevfs/gnome-vfs.h)
 
+# Making releases:
+#   LIBGNOMEVFS_MICRO_VERSION += 1;
+#   LIBGNOMEVFS_INTERFACE_AGE += 1;
+# if any functions have been added, set LIBGNOMEVFS_INTERFACE_AGE to 0.
+# if backwards compatibility has been broken,
+# set LIBGNOMEVFS_BINARY_AGE and LIBGNOMEVFS_INTERFACE_AGE to 0.
+#
+LIBGNOMEVFS_MAJOR_VERSION=2
+LIBGNOMEVFS_MINOR_VERSION=3
+LIBGNOMEVFS_MICRO_VERSION=1
+LIBGNOMEVFS_INTERFACE_AGE=1
+# If you need a modifier for the version number. 
+# Normally empty, but can be used to make "fixup" releases.
+LIBGNOMEVFS_EXTRAVERSION=
+
+dnl libtool versioning from libgnome
+
+LIBGNOMEVFS_CURRENT=`expr 100 '*' $LIBGNOMEVFS_MINOR_VERSION + $LIBGNOMEVFS_MICRO_VERSION - $LIBGNOMEVFS_INTERFACE_AGE`
+LIBGNOMEVFS_BINARY_AGE=`expr 100 '*' $LIBGNOMEVFS_MINOR_VERSION + $LIBGNOMEVFS_MICRO_VERSION`
+LIBGNOMEVFS_REVISION=$LIBGNOMEVFS_INTERFACE_AGE
+LIBGNOMEVFS_AGE=`expr $LIBGNOMEVFS_BINARY_AGE - $LIBGNOMEVFS_INTERFACE_AGE`
+LIBGNOMEVFS_VERSION=$LIBGNOMEVFS_MAJOR_VERSION.$LIBGNOMEVFS_MINOR_VERSION.$LIBGNOMEVFS_MICRO_VERSION$LIBGNOMEVFS_EXTRAVERSION
+
+AC_SUBST(LIBGNOMEVFS_CURRENT)
+AC_SUBST(LIBGNOMEVFS_REVISION)
+AC_SUBST(LIBGNOMEVFS_AGE)
+
+	
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(gnome-vfs, 2.3.1)
+AM_INIT_AUTOMAKE(gnome-vfs, $LIBGNOMEVFS_VERSION)
 
 AM_MAINTAINER_MODE
 
